--- a/css/header.scss
+++ b/css/header.scss
@@ -1,33 +1,39 @@
 header{
-    width: 100%;
-    height: 70px;
-    background: rgba(255, 255, 255, 0.555);
+    width: 90%;
     .cont{
-        margin: auto;
-        width: 90%;
+        width: 100%;
         max-width: 1200px;
-        height: 100%;
         display: flex;
-        flex-flow: row;
         justify-content: space-between;
-        align-items: center;
+        flex-flow: row;
+        height: 70px;
+        margin: auto;
         .logo{
-            font-size: 1.7em;
-            font-weight: 700;
-            margin: 10px;
-        }
-        ul{
-            list-style: none;
-            display: flex;
-            flex-flow: row;
-            width: 50%;
-            justify-content: space-around;
-            li{
-                padding: 10px;
+            img{
+                width: 100px;
                 height: 100%;
-                font-size: 1.2em;
+                object-fit: contain;
+                margin: auto;
             }
         }
+        ul{
+            width: 60%;
+            height: 100%;
+            display: flex;
+            flex-flow: row;
+            justify-content: space-around;
+            li{
+                padding: 0 4%;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                display: flex;
 
+                &:nth-child(5){
+                    border: 1px solid red;
+                    border-radius: 4px;
+                }
+            }
+        }
     }
 }
