--- a/css/main.scss
+++ b/css/main.scss
@@ -1,27 +1,27 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    list-style: none;
+}
+body{
+    background-color: rgb(241, 241, 241)
 }
 
-@import url("header.min.css");
-@import url("slider.min.css");
-@import url("section.min.css");
-@import url("imgparallax.min.css");
-@import url("languajes.min.css");
+@import url("./header.min.css");
+@import url("./slide.min.css");
+@import url("./section.min.css");
+
 
 footer{
     width: 100%;
     height: 70px;
+    font-size: 1.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5em;
-    background-color: rgb(22, 21, 21);
+    background-color: rgb(31, 30, 30);
+    box-shadow: black 0 5px 5px 10px;
     color: white;
 }
-
-
-
-
