--- a/css/section.scss
+++ b/css/section.scss
@@ -1,21 +1,33 @@
 section{
-    margin-top: 75vh;
-    width: 100%;
+width: 100%;
+margin:200px 0;
     article{
         width: 90%;
         max-width: 1200px;
-        display: flex;
-        align-items: center;
-        flex-flow: nowrap row;
         margin: auto;
-        .title{
-            width: 40%;
-            font-size: 2em;
-        }
-        .text{
-            width: 50%;
-            margin: auto;
-            line-height: 1.3em;
+        display: flex;
+        justify-content: space-between;
+        .card{
+            width: 300px;
+            ul{
+                margin: 50px 0;
+                width: 100%;
+                display: flex;
+                flex-flow: column;
+                img{
+                    width: 30%;
+                    aspect-ratio: 1/1;
+                }
+                li{
+                display: flex;
+                justify-content: center;
+                margin: 10px 0;
+                padding: 0 10%;
+                line-height: 1.3em;
+                text-align: center;
+            }
+            }
+            box-shadow: #8a8a8a 2px 2px 5px;
         }
     }
 }
